fix paths for github pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Valhalla Craft Brewery</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Front-End templates for Project">
+    <meta name="description" content="Plundering Kunming's thirst for good quality, fresh craft beer!">
     <meta name="author" content="Darry Snow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index,follow">
@@ -15,18 +15,18 @@
     <meta name="twitter:creator:id" content="4917735106">
     <meta name="twitter:url" property="og:url" content="undefined">
     <meta name="twitter:title" property="og:title" content="Valhalla Craft Brewery">
-    <meta name="twitter:description" property="og:description" content="Front-End templates for Project">
+    <meta name="twitter:description" property="og:description" content="Plundering Kunming's thirst for good quality, fresh craft beer!">
     <meta name="twitter:image" property="og:image" content="undefined/images/icon.png">
     <link rel="canonical" href="undefined">
     <link rel="me" href="mailto:ray.denning@gmail.com">
     <link rel="me" href="sms:+8618787444489">
     <link rel="webmention" href="undefined/webmention">
-    <link rel="shortcut icon" type="image/ico" href="/images/favicon.ico">
-    <link rel="shortcut icon" type="image/png" href="/images/icon.png">
-    <link rel="apple-touch-icon" type="image/png" href="/images/icon.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="images/icon.png">
+    <link rel="apple-touch-icon" type="image/png" href="images/icon.png">
+    <link rel="manifest" href="manifest.json">
     <!-- build:css /styles/main.min.css-->
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild-->
   </head>
   <body><svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -47,7 +47,7 @@
 </svg>
 
     <section class="c-hero">
-      <div class="c-hero__content"><img src="/images/valhalla-logo.svg" alt="哇哈啦标志 Valhalla logo" class="c-hero__logo">
+      <div class="c-hero__content"><img src="images/valhalla-logo.svg" alt="哇哈啦标志 Valhalla logo" class="c-hero__logo">
         <h1 class="c-hero__heading">Vallhalla 哇哈啦
           <div class="subheading">Craft Brewery 精酿啤酒厂
             <div class="subheading">Kunming 昆明, Yunnan 云南, China 中国</div>
@@ -56,7 +56,7 @@
       </div>
     </section>
     <footer class="c-footer">
-      <div class="c-footer__map"><a href="http://j.map.baidu.com/nBRD8" title="打开百度地图 Click to open Baidu Map"><img src="/images/map.png" alt="哇哈啦地图 Map to Valhalla"></a></div>
+      <div class="c-footer__map"><a href="http://j.map.baidu.com/nBRD8" title="打开百度地图 Click to open Baidu Map"><img src="images/map.png" alt="哇哈啦地图 Map to Valhalla"></a></div>
       <div class="c-footer__contact-details">
         <p>昆明市五华区普吉路47号秘境M60文化创意园18D</p>
         <p><a href="tel:+8618787444489" title="给我们打电话 Phone us">(+86) 187-8744-4489</a></p>
@@ -73,7 +73,7 @@
               <svg viewBox="0 0 32 32" class="o-icon">
                 <use xlink:href="#icon-weibo"></use>
               </svg></a></li>
-          <li class="c-footer__social-media__item c-footer__social-media__item--weixin"><img src="/images/qr-code.png" alt="Follow us on Wechat"></li>
+          <li class="c-footer__social-media__item c-footer__social-media__item--weixin"><img src="images/qr-code.png" alt="Follow us on Wechat"></li>
         </ul>
         <p role="contentinfo"><small>&copy; 2016 Valhalla Craft Brewery</small></p>
       </div>
