--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <svg viewBox="0 0 32 32" class="o-icon">
                 <use xlink:href="#icon-weibo"></use>
               </svg></a></li>
-          <li class="c-footer__social-media__item c-footer__social-media__item--weixin"><img src="images/qr-code.png" alt="Follow us on Wechat"></li>
+          <li class="c-footer__social-media__item c-footer__social-media__item--weixin"><img src="images/qr-code.jpg" alt="Follow us on Wechat"></li>
         </ul>
         <p role="contentinfo"><small>&copy; 2016 Valhalla Craft Brewery</small></p>
       </div>
